# CRM-system

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CRM-system.proto  CRM_system  CRM_system.cbp  LICENSE  Makefile  README.md  clients.txt  cmake_install.cmake  main.cpp  managers.txt  passwords.txt
.github/workflows/: c-cpp.yml
CRM-system/: CMakeLists.txt
CRM-system/CRM-system_client/include/: CRM-system_client.h  fwd.h  graphics.h  storage.h  storageFileSystem.h  useCases.h
CRM-system/CRM-system_client/src/: CRM-system_client.cpp  deletemail.sh  graphics.cpp  main.cpp  people.cpp  sendmail.sh  storageFileSystem.cpp  useCases.cpp
CRM-system/CRM-system_server/: CRM-system_server.cc
CRM-system/CRM-system_server/include_server/: CRM-system_server.h  storageDataBase.h  useCases_server.h
CRM-system/CRM-system_server/src_server/: CRM-system_server.cpp  main_server.cpp  storageDataBase.cpp  useCases_server.cpp
Documentation/: The location of resources
hosts_dir/: client_host  server_host
include/: client.h  fwd.h  graphics.h  managerRepository.h  people.h  peopleMVP.h  storage.h  storageDataBase.h  storageFileSystem.h  testing.h  useCases.h  useCasesFileSystem.h
server/: CRM_server.cpp  server
src/: client.cpp  graphics.cpp  main.cpp  people.cpp  peopleMVP.cpp  storageDataBase.cpp  storageFileSystem.cpp  testing.cpp  useCases.cpp
testing/: file_structure_test.cpp
